updated npm and fixed layout issue

--- a/public/css/chordListen.scss
+++ b/public/css/chordListen.scss
@@ -6,10 +6,10 @@
 
 
   #chordsListen{
-    height: 70vh;
+    height: 525px;
+    width: 850px;
     margin: auto;
-    width: 60vw;
-    margin-top: 8vh;
+    margin-top: 10vh;
     // background: linear-gradient(0deg, rgba(45,45,45,1) 0%, rgba(45,45,45,1) 97%, rgba(0,0,0,1) 100%);
     background-color: #ffa41b;
     text-align: center;
@@ -46,7 +46,7 @@
 
   #inversionButtonContainer{
     margin: 0;
-    font-size: 60px;
+    font-size: 55px;
     cursor: pointer;
     display: flex;
   }
@@ -71,7 +71,7 @@
 
   .listenButtonContainer {
     padding-top: 0px;
-    width: 50vw;
+    width: 800px;
     display: inline-flex;
     align-items: center;
     flex-wrap: wrap;
@@ -82,9 +82,9 @@
     border-radius: 50%;
     color: #FFF;
     cursor: pointer;
-    width: 14vh;
-    line-height: 12vh;
-    font-size: 3.5vh;
+    width: 90px;
+    line-height: 80px;
+    font-size: 22px;
     margin: 7px;
     border: 7px solid #FFF;
     overflow: hidden;
