--- a/public/css/footerStyles.css
+++ b/public/css/footerStyles.css
@@ -1,12 +1,15 @@
 .footer {
     font-family: 'Comfortaa', cursive;
-    font-size: .8vh;
+    font-size: .7vh;
     color: #2d2d2d;
     color: #dbdbdb;
     letter-spacing: -.05vw;
-    padding-top: 7vh;
+    /* padding-top: 25vh; */
     display: flex;
     align-items: center;
     justify-content: center;
+    position: fixed;
+    bottom: 10px;
+    right: 45vw; 
 }
 
